fix bug header z-index

--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -2,6 +2,7 @@
    position: absolute;
    width: 100%;
    color: $text-color;
+   z-index: 1;
 
    &__panel {
       display: flex;
